--- a/Task2/terraform.tfvars.example
+++ b/Task2/terraform.tfvars.example
@@ -1,4 +1,3 @@
-project_id      = ""  #Add project name
-region          = "us-central1"
-container_image = "saqlainkhan/simple-time-service"
+project_id      = "gcp-terraform-481311"
+container_image = "nginx:alpine"
 app_port        = 80
